# fabric-agent

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  create_directory.py  get_activity_events.py  get_dataset_datasources.py  get_datasource_users.py  get_gateway_datasources.py  get_item_definition.py  get_item_definitions.py  get_metadata_scan_results.py  get_metadata_scan_results_manual.py  get_report_pages.py  get_workspace_items.py  get_workspaces_as_admin.py  list_workspaces.py  main.py  package-lock.json  pyproject.toml  read_activity_events.py  split_workspaces_into_chunks.py  test_fabric_lib.py  utils.py
docs/superpowers/plans/: 2026-04-14-bulk-get-item-definitions.md  2026-04-14-get-item-definition.md  2026-04-20-get-workspace-items-sdk-migration.md
docs/superpowers/specs/: 2026-04-14-bulk-get-item-definitions-design.md  2026-04-14-get-item-definition-design.md  (+1 more)
services/: aadservice.py  bulkexportitemdefinitions.py  cloudlogger.py  fabriccredential.py  getlongrunningoperationresult.py  listitems.py  listworkspaces.py  logging_config.json
services/powerbi/: addremoveworkspaceuser.py  getactivityevents.py  getdataflowdatasources.py  getdataflows.py  getdatasetdatasources.py  getgateways.py  getmodifiedworkspaces.py  getpipelines.py  getrefreshables.py  getrefreshhistoryingroup.py  getreportpages.py  getscanresult.py  getscanstatus.py  getworkspaces.py  getworkspacesasadmin.py  postworkspaceinfo.py  semanticmodels.py
tests/: test_fabriccredential.py  test_get_workspace_items.py  test_listitems.py  test_listworkspaces.py
