[project]
name = "fabric-agent"
version = "0.1.0"
description = "Fabric DataOps by Anton Fernando"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-identity-broker>=1.3.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "microsoft-fabric-api>=0.1.0b1",
    "msal>=1.34.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
